# 601

./: .gitignore  .ignore  601.sources.list  Dockerfile  build_docker.sh  example.py  start.sh  start_soar.sh
brains/: simple.py  sm.h
lab/: brain.py  dsignal.py  simple.py  sm.h
lab/designLab03/: moveBrainSkeleton.py
lab/designLab04/: designLab04Work.py  smBrainPlotDistSkeleton.py
lab/designLab05/: propWallFollowBrainSkeleton.py
lab/designLab06/: anglePlusPropBrainSkeleton.py  delayPlusPropBrainSkeleton.py
lab/swLab02/: swLab02Work.py
lib/: Cargo.toml  build.sh  sm.h  test.py
lib/src/: io.rs  lib.rs  main.rs  opt.rs  poly.rs  sf.rs  sig.rs  sm.rs  sm_course.rs  sonars.rs  util.rs
rust/: Cargo.toml  sm.h  test.py
rust/src/: lib.rs  main.rs  sm.rs  sm_course.rs  tests.rs
rust/src/tests/: sm_course.rs
worlds/: empty.py
