[package]
name = "sm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
safer-ffi = { path = "/home/adiallo/wks/rust/safer_ffi"}
faer = {version = "0.23", optional = true }

[features]
default = ["poles"]
headers = ["safer-ffi/headers", "safer-ffi/python-headers"]
poles = ["dep:faer"]
